[package]
name = "tc-emulator"
version = "0.1.0"
rust-version = "1.86"
edition = "2024"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
colored = "2.0.0"
anyhow = "1.0.71"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-lambda = { version = "1.76.0", features = ["behavior-version-latest"] }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
composer = { git = "https://github.com/tc-functors/tc.git", rev = "130d286"}
authorizer = { git = "https://github.com/tc-functors/tc.git", rev = "130d286"}
kit = { git = "https://github.com/tc-functors/tc.git", rev = "130d286"}

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1